--- a/ARDicee/Base.lproj/Main.storyboard
+++ b/ARDicee/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ARDicee-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="ARDicee" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </arscnView>
-                    <navigationItem key="navigationItem" id="gFW-6v-93a">
+                    <navigationItem key="navigationItem" title="ARDicee" id="gFW-6v-93a">
+                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="sGM-Yl-p9a">
+                            <connections>
+                                <action selector="removeAllDice:" destination="BV1-FR-VrT" id="PZj-vR-B4R"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="31Y-gk-1XV">
                             <connections>
                                 <action selector="rollAgain:" destination="BV1-FR-VrT" id="XO9-KN-iwg"/>
